syntax = "proto3";
option csharp_namespace = "MerchandiseService.Grpc";
package MerchandiseService;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service MerchandiseServiceGrpc {
  rpc GetAllMerchandiseItems (GetAllMerchandiseItemsRequest) returns (GetAllMerchandiseItemsResponse);
  rpc GetAllMerchandiseItemsV2 (google.protobuf.Empty) returns (GetAllMerchandiseItemsResponse);
  rpc GetAllMerchandiseItemsWithNulls (google.protobuf.Empty) returns (GetAllMerchandiseItemsWithNullsResponse);
  rpc GetAllMerchandiseItemsMap(google.protobuf.Empty) returns (GetAllMerchandiseItemsMapResponse);
  
  rpc AddMerchandiseItem (AddMerchandiseItemRequest) returns (google.protobuf.Empty);
  
  rpc GetAllMerchandiseItemsStreaming (GetAllMerchandiseItemsRequest) returns (stream GetAllMerchandiseItemsResponseUnit);
  
  rpc AddMerchandiseItemStreaming (stream AddMerchandiseItemRequest) returns (google.protobuf.Empty);
  
  rpc GetMerch (GetMerchRequest) returns (GetMerchResponse);
  
  rpc GetMerchExtraditionInfo (GetMerchRequest) returns (GetMerchResponse);
}

message GetAllMerchandiseItemsRequest {
}

message GetAllMerchandiseItemsResponse {
  repeated GetAllMerchandiseItemsResponseUnit merchandises = 1;
}

message GetAllMerchandiseItemsResponseUnit {
  int64 item_id = 1;
  string item_name = 2;
  int32 quantity = 3;
}

message GetAllMerchandiseItemsWithNullsResponse {
  repeated GetAllMerchandiseItemsWithNullsResponseUnit merchandises = 1;
}

message GetAllMerchandiseItemsWithNullsResponseUnit {
  int64 item_id = 1;
  google.protobuf.StringValue item_name = 2;
  google.protobuf.Int32Value quantity = 3;
}

message GetAllMerchandiseItemsMapResponse {
  map<int64, GetAllMerchandiseItemsResponseUnit> merchandises = 1;
}

message AddMerchandiseItemRequest {
  string item_name = 1;
  int32 quantity = 2;
}

enum MerchandiseType {
  NONE = 0;
  T_SHIRT = 1;
  SHOES = 2;
}

message GetMerchRequest {
	int64 item_id = 1;
}

message GetMerchResponse {
  repeated GetAllMerchandiseItemsResponseUnit merchandises = 1;
}